# fitness-activity-prediction

./: .env.example  .gitignore  JOURNAL.md  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_features.ipynb  03_lstm_check.ipynb  04_final_comparison.ipynb
report/: final_metrics.md
src/api/: main.py
src/data/: add_target.py  loader.py  preprocess.py
src/eval/: metrics.py
src/features/: build_features.py
src/models/: dataset.py  lstm.py  train_baseline.py  train_lstm.py
tests/: test_loader.py  test_metrics.py
